Add Windows whitespace support.